# datasaurus

./: .gitignore  CONTRIBUTING.md  README.md  railway.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  railway.toml
backend/src/datasaurus/: api.py  cli.py  generator.py  shapes.py  stats.py
backend/tests/: test_api.py  test_api_batch.py  test_api_loop.py  test_generator.py  test_generator_loop.py  test_shapes.py  test_stats.py
frontend/: components.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/loop/: page.tsx
frontend/src/components/: controls.tsx  error-banner.tsx  grid-cell.tsx  grid.tsx  info-panel.tsx  mode-toggle.tsx  scatter-canvas.tsx  shape-picker.tsx  stats-bar.tsx  theme-provider.tsx
frontend/src/components/ui/: command.tsx  dialog.tsx  select.tsx  sheet.tsx  toggle.tsx  tooltip.tsx
frontend/src/hooks/: useBatchSSE.ts  useKeyboardShortcuts.ts  useLoopSSE.ts
frontend/src/lib/: anim-context.ts  api.ts  constants.ts  format.ts  theme.tsx  types.ts
frontend/src/store/: grid.ts
