[project]
name = "datasaurus"
version = "0.1.0"
description = "Same stats, different shapes — real-time simulated annealing visualization"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=2.2",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "svgpathtools>=1.7.2",
    "typer[all]>=0.25.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
datasaurus = "datasaurus.cli:main"
datasaurus-api = "datasaurus.api:app"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
